fix tweets spacing, flash msg spacing and color

--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -67,3 +67,7 @@ $file-flipper-back: 'http://res.cloudinary.com/techblogpics/image/upload/v138965
     background: url($file-flipper-back) top left no-repeat;    
 }
 
+
+.tweets {
+   margin-top: 20px;
+}
