--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -146,11 +146,20 @@ body {
    font-size: 2.8em;
 }
 
+.alert {
+   margin-top: 20px;
+   font-weight: 400;
+   color: black;
+}
 
 .alert-success {
-  background: none;
-  border-color: #999;
+   background: linear-gradient(to bottom, rgba(164,179,87,1) 0%,rgba(117,137,12,1) 100%);
 }
+
+.alert-danger {
+   background: linear-gradient(to bottom, rgba(255,175,75,1) 0%,rgba(255,146,10,1) 100%); /* W3C */ 
+}
+
 
 
 // The back to top button, on every page.
